# SlmTunner

./: .env.example  .gitignore  Dockerfile  README.md  config.yaml  convert_jsonl.py  hf_login.py  manager.py  pyproject.toml  requirements.txt  run_docker.ps1  train_model.py  train_model_improved.py
chat_universal_lora/: chat_universal_lora.py
core/: config_loader.py  constants.py  data_validator.py  evaluator.py  experiment_tracker.py  model_inspector.py  strategy.py  system_analyzer.py  trainer.py
sampledataexample/: example_result.jsonl  example_train.jsonl  example_valid.jsonl
scripts/legacy/: convert_jsonl.py  train_model.py  train_model_improved.py
tests/: conftest.py  test_config_loader.py  test_data_validator.py  test_evaluator.py  test_experiment_tracker.py  test_model_inspector.py  test_strategy.py
