[project]
name = "slmtunner"
version = "2.2.0"
description = "Automated LoRA tuning pipeline for Small Language Models (SLM)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "ILAHAN7"}
]

[project.urls]
Repository = "https://github.com/ILAHAN7/SlmTunner"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ruff]
line-length = 120
target-version = "py39"
